--- a/flutterblog/_config.yml
+++ b/flutterblog/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://gitee.com/abercio/flutter
+url: https://abercio.gitee.io/flutter
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -104,5 +104,5 @@ theme: pure
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@gitee.com:abercio/flutter.git
+  repo: https://gitee.com/abercio/flutter.git
   branch: master
